--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 align="center"><font color="red">PROJECTS</font></h1>
+                    <h1 align="center"><font color="white" style="text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.776);">PROJECTS</font></h1>
                     <hr>
                     
                 </div>
@@ -357,7 +357,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col-12 videotitle">
-                    <h1 align="center"><font color="red">VIDEOS</font></h1>
+                    <h1 align="center"><font color="red" style="text-shadow: 0px 3px 3px rgba(255, 0, 0, 0.6);">VIDEOS</font></h1>
                     <hr>
                 </div>
             </div>
