work on home page mobile view
work on home page mobile view
not completed yet

--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
     <section class="best">
         <div class="container">
             <div class="row">
+                <div class="col-md-5 col-12 mobilebest1 " >
+                    <img src="best1.jpg" alt=""  class="shadow">
+                    
+                </div>
                 <div class="col-md-7 col-12 subtitlebox">
-                     <h1 style="font-size: 50px;">
+                     <h1 >
                         <!-- Why <font color="#CB7821">FotoCine??</font> -->
-                         Why <span style="color: #FF4949; font-size: 60px; text-shadow: 0px 2px 2px rgba(255, 0, 0, 0.6);">FotoCine??</span>
+                         Why <span>FotoCine??</span>
                      </h1>
-                     <h1 style="font-size:45px; font-family: 'Croissant One', serif;">
+                     <h1  class="qualityMattwe">
                         Because Quality Matters.
                      </h1>
                      <h3 >
@@ -118,10 +122,10 @@
                          </div>
                          
                     </div>
-                    <div class="col-md-3 col-12">
+                    <div class="col-md-3 col-12 best3">
                             <img src="best3.jpg" alt="" style="padding:0px; margin-bottom: 20px;" class="shadow">
                     </div>
-                    <div class="col-md-3 col-12">
+                    <div class="col-md-3 col-12 best2 ">
                             <img src="best2.jpg" alt="" style="padding:0px; margin-bottom: 20px;" class="shadow">
                     </div>
             </div>
