team ui is completed

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
      <section class="about1">
        <div class="container">
         <div class="row">
-              <div class="col-md-6 col-12">
+              <div class="col-md-6 col-12 computermine2">
                     <img src="mine.jpg" alt="">
               </div>
               <div class="col-md-6 col-12">
@@ -118,6 +118,9 @@
                   <h4>
                     WE ARE LOVED AND RESPECTED FOR OUR CINEMATIC VIDEOS AND COFFEE BOOK ALBUMS AND THAT IS WHAT MAKES US DIFFERENT.
                   </h4>
+              </div>
+              <div class="col-md-6 col-12 mobilemine2">
+                    <img src="mine.jpg" alt="">
               </div>
         </div>
       </div>
@@ -135,7 +138,7 @@
 Photography, to me, is more than just a profession; it's a means of connecting, expressing, and immortalizing the beauty of life. It's the art of preserving memories and sharing emotions, one frame at a time.
                   </h3>
               </div>
-              <div class="col-md-6 col-12">
+              <div class="col-md-6 col-12 ">
                     <img src="mine1.jpg" alt="">
               </div>
         </div>
@@ -144,7 +147,7 @@ Photography, to me, is more than just a profession; it's a means of connecting, 
     <section class="about1">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-12">
+          <div class="col-md-6 col-12 computermine2">
                 <img src="mine.jpg" alt="">
           </div>
           <div class="col-md-6 col-12">
@@ -154,6 +157,9 @@ Photography, to me, is more than just a profession; it's a means of connecting, 
               <h3>
                 I embark on my photography journey with a steadfast mission: to capture moments that transcend time. Through breathtaking photographs and videos, I strive to immortalize the beauty and emotion woven into life's tapestry.
               </h3>
+          </div>
+          <div class="col-md-6 col-12 mobilemine2">
+                <img src="mine.jpg" alt="">
           </div>
     </div>
 
