--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1 align="center"><font color="white" style="text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.776);">PROJECTS</font></h1>
+                    <h1 class="sech1">PROJECTS</h1>
                     <hr>
                     
                 </div>
