--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <a class="nav-link" href="service.html">SERVICES</a>
                               </li>
                               <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="gallery.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="gallery.html" >
                                   GALLERY
                                 </a>
                                 
