--- a/team.html
+++ b/team.html
@@ -173,7 +173,7 @@
                         </a>
                        
                     <h3 align="center"><font color="white">RAJU</font></h3>
-                    <h4 align="center"><font color="red">All-Rounder</font></h4>
+                    <h4 align="center"><font color="red">Director</font></h4>
                     </div>
                 </div>
                 <div class="col-md-4 col-12 " >
