files are make proper
just organised the files

--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                
               </div>
               <div class="col-md-6 col-12">
-                    <img src="mine2.jpg" alt="">
+                    <img src="Images/mine2.jpg" alt="">
               </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
        <div class="container">
         <div class="row">
               <div class="col-md-6 col-12 computermine2">
-                    <img src="mine.jpg" alt="">
+                    <img src="Images/mine.jpg" alt="">
               </div>
               <div class="col-md-6 col-12">
                   <h3>
@@ -120,7 +120,7 @@
                   </h4>
               </div>
               <div class="col-md-6 col-12 mobilemine2">
-                    <img src="mine.jpg" alt="">
+                    <img src="Images/mine.jpg" alt="">
               </div>
         </div>
       </div>
@@ -139,7 +139,7 @@ Photography, to me, is more than just a profession; it's a means of connecting, 
                   </h3>
               </div>
               <div class="col-md-6 col-12 ">
-                    <img src="mine1.jpg" alt="">
+                    <img src="Images/mine1.jpg" alt="">
               </div>
         </div>
       </div>
@@ -148,7 +148,7 @@ Photography, to me, is more than just a profession; it's a means of connecting, 
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-12 computermine2">
-                <img src="mine.jpg" alt="">
+                <img src="Images/mine.jpg" alt="">
           </div>
           <div class="col-md-6 col-12">
               <h1 class="lasth1">
@@ -159,7 +159,7 @@ Photography, to me, is more than just a profession; it's a means of connecting, 
               </h3>
           </div>
           <div class="col-md-6 col-12 mobilemine2">
-                <img src="mine.jpg" alt="">
+                <img src="Images/mine.jpg" alt="">
           </div>
     </div>
 
