--- a/gallery.html
+++ b/gallery.html
@@ -69,32 +69,31 @@
                 </div>
             </div>
         </div>
-    
     </header>
 
   <h1>Image Gallery</h1>
 
   <div class="gallery">
-    <div class="gallery-item"><img src="c1.jpg" alt="Image 1" /></div>
-    <div class="gallery-item"><img src="wedding.JPG" alt="Image 2" /></div>
-    <div class="gallery-item"><img src=".jpg" alt="Image 3" /></div>
-    <div class="gallery-item"><img src="c10.jpg" alt="Image 4" /></div>
-    <div class="gallery-item"><img src="project1.jpg" alt="Image 5" /></div>
-    <div class="gallery-item"><img src="c13.jpg" alt="Image 6" /></div>
-    <div class="gallery-item"><img src="t7.jpg" alt="Image 7" /></div>
-    <div class="gallery-item"><img src="project3.jpg" alt="Image 8" /></div>
-    <div class="gallery-item"><img src="t6.jpg" alt="Image 9" /></div>
-    <div class="gallery-item"><img src="project12.jpg" alt="Image 10" /></div>
-    <div class="gallery-item"><img src="t8.jpg" alt="Image 11" /></div>
-    <div class="gallery-item"><img src="project11.jpg" alt="Image 12" /></div>
-    <div class="gallery-item"><img src="c4.jpg" alt="Image 13" /></div>
-    <div class="gallery-item"><img src="t1.jpg" alt="Image 14" /></div>
-    <div class="gallery-item"><img src="c5.jpg" alt="Image 15" /></div>
-    <div class="gallery-item"><img src="t5.jpg" alt="Image 16" /></div>
-    <div class="gallery-item"><img src="t2.jpg" alt="Image 17" /></div>
-    <div class="gallery-item"><img src="c7.jpg" alt="Image 18" /></div>
-    <div class="gallery-item"><img src="subh.JPG" alt="Image 19" /></div>
-    <div class="gallery-item"><img src="t3.jpg" alt="Image 20" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c1.jpg" alt="Image 1" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c2.jpg" alt="Image 2" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c3.jpg" alt="Image 3" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c4.jpg" alt="Image 4" /></div>
+    <div class="gallery-item"><img src="GallaryImage/project1.jpg" alt="Image 5" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c13.jpg" alt="Image 6" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c7.jpg" alt="Image 7" /></div>
+    <div class="gallery-item"><img src="Images/project3.jpg" alt="Image 8" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c6.jpg" alt="Image 9" /></div>
+    <div class="gallery-item"><img src="Images/project12.jpg" alt="Image 10" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c8.jpg" alt="Image 11" /></div>
+    <div class="gallery-item"><img src="Images/project11.jpg" alt="Image 12" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c4.jpg" alt="Image 13" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c1.jpg" alt="Image 14" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c5.jpg" alt="Image 15" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c6.jpg" alt="Image 16" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c2.jpg" alt="Image 17" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c7.jpg" alt="Image 18" /></div>
+    <div class="gallery-item"><img src="Images/subh.JPG" alt="Image 19" /></div>
+    <div class="gallery-item"><img src="GallaryImage/c3.jpg" alt="Image 20" /></div>
     <!-- add more .gallery-item as needed -->
   </div>
 
