--- a/service.html
+++ b/service.html
@@ -77,7 +77,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6 col-md-12 parallax">
-              <div class="background-image" style="background-image: url('project4.jpg');"></div>
+              <div class="background-image" style="background-image: url('Images/project4.jpg');"></div>
             </div>
             <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center ">
               <div class="text-container">
@@ -96,7 +96,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6 col-md-12 order-lg-2 parallax">
-              <div class="background-image" style="background-image: url('project05.jpg');"></div>
+              <div class="background-image" style="background-image: url('Images/project05.jpg');"></div>
             </div>
             <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center order-lg-1">
               <div class="text-container">
@@ -113,7 +113,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6 col-md-12 parallax">
-              <div class="background-image" style="background-image: url('project3.jpg');"></div>
+              <div class="background-image" style="background-image: url('Images/project3.jpg');"></div>
             </div>
             <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center">
               <div class="text-container">
@@ -129,14 +129,14 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-lg-6 col-md-12 order-lg-2 parallax">
-              <div class="background-image" style="background-image: url('project2.jpg');"></div>
+              <div class="background-image" style="background-image: url('Images/project2.jpg');"></div>
             </div>
             <div class="col-lg-6 col-md-12 d-flex align-items-center justify-content-center order-lg-1">
               <div class="text-container">
                 <h2>VISNU THIRD WEDDING</h2>
                 <p>AB RUCK JA BHAI KITNA SADDI KREGA.
                   Let us be a part of your pre wedding emotion.
-    Wedding is a celebrated function where the name of a number of relationship changes. Once a Miss becomes Misses and a boy becomes a responsible husband. In this changing emotions, we present you with one of our exclusive service, the pre wedding shoot. We take to frame the romantic bonding between two partners who are ready to be the lawfully wedded man and wife. You can click a picture or two with your smartphone and save some of your cherished moments but a professional like us will let you live the moment so you don’t have to bother to engage with your phone. Ashirvad Entertainment has years of experience offering the required expertise to bring up all that it takes to portray the chemistry between couples.
+                  Wedding is a celebrated function where the name of a number of relationship changes. Once a Miss becomes Misses and a boy becomes a responsible husband. In this changing emotions, we present you with one of our exclusive service, the pre wedding shoot. We take to frame the romantic bonding between two partners who are ready to be the lawfully wedded man and wife. You can click a picture or two with your smartphone and save some of your cherished moments but a professional like us will let you live the moment so you don’t have to bother to engage with your phone. Ashirvad Entertainment has years of experience offering the required expertise to bring up all that it takes to portray the chemistry between couples.
                 </p>
               </div>
             </div>
