--- a/team.html
+++ b/team.html
@@ -205,12 +205,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-12">
-                    <h3><u>FOTOCINE</u></h3>
-                    <p>The concept of Fotocine has roots in the<br>
-                    Vedic Literature. It comes as a developed<br>
-                    form of sensual phptography without<br>
-                    mechanistics details and boasts a strong <br>
-                    emotional background.<br>
+                     <h1 class="titletext" style="font-size: 20px; text-shadow: 0px 3px 3px rgba(255, 0, 0, 0.6);">  FOTOCINE <span style="color:rgb(255, 255, 255); text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.6);" class="titletext"> STUDIO </span> </h1>
+                    <p style="text-align: justify; padding-right: 30px; margin-top: 20px;">
+                        The concept of Fotocine has roots in the
+                    Vedic Literature. It comes as a developed
+                    form of sensual phptography without
+                    mechanistics details and boasts a strong 
+                    emotional background.
                     </p>
                 </div>
                 <div class="col-md-4 col-12 ">
